# signfetch

./: .gitignore  Dockerfile  Dockerfile.e2e  LICENSE  README.md  __init__.py  exceptions.py  harvester.py  http_client.py  parsers.py  pyproject.toml  test-main.py  test_download_data.py  test_parsers.py  utils.py
.github/workflows/: ci.yml  publish.yml
examples/manual/: run.py
examples/scenario-1/: run.py
examples/scenario-2/: run.py
scripts/: publish_testpypi.sh
src/signfetch/: __init__.py  api.py  downloader.py  exceptions.py  harvester.py  http_client.py  models.py  parsers.py  utils.py
tests/: test_api.py  test_download_data.py  test_parsers.py
tests/e2e/: test_examples.py
