[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signfetch"
version = "0.1.0"
description = "Download data resources discovered via FAIR Signposting item links."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Adam Biśta" }
]
license = "MIT"
keywords = ["signposting", "fair", "download", "data", "linkset"]
dependencies = [
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.0",
  "build>=1.2.0",
  "twine>=5.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q -m 'not e2e'"
markers = [
  "e2e",
]

[tool.coverage.run]
source = ["signfetch"]

[tool.setuptools.packages.find]
where = ["src"]
